2003-01-30  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader: Conditionally support SVGZ files
	* TODO: Remove SVGZ in pixbuf loader TODO-item
	* tests/104201.svg, tests/folder_home-2.2.svg, tests/stock_home.svg,
	tests/stock_paste.svg, tests/undo-128-d-sodipodi.svg.gz: New testcases
	
2003-01-30  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in, Makefile.am, librsvg-2.0.pc.in: Work by FJF and myself
	to conditionally build and install the libgsf-based GZip handle.
	Bump version number. Perhaps should branch as well.
	* rsvg-file-util.c: Export the new hidden _ex API calls
	* rsvg.h: Ditto
	
2003-01-30  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-file-util.c (*): Made '_ex' versions of all "convenience" 
	functions that take a RsvgHandle as an argument. This will allow the 
	caller to pass in a handle with DPI specified, or a handle capable of 
	handling gzipped files. Made all existing convenience functions call
	their _ex cousins. TODO: make the _ex functions part of the public API.
	
2003-01-30  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-paint-server.c (radial, linear): Handle objBbox coordinate space properly. Thanks Lauris for the tip!
	
2003-01-30  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (rsvg_start_svg): s/TRUE/FALSE to fix scaling vbox issue
	
2003-01-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-paint-server.[ch]: Handle objectBoundingBox units for linear gradients, radialGradients. Radial are untested and do not work properly.
	* rsvg.c: Query the gradientUnits param, in order to pass to ^^^
	* TODO: Update info so that the objectBoundingBox gets handled properly in case of percentage values.
	* tests/obj_bbox.svg: Test for the above

2003-01-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-gz.c: Fix build
	* rsvg-file-util.c: Remove GNOME VFS code.
	
2003-01-28  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-gz.[ch]: New handle type, capable of reading SVGZ files.
	Not built currently, but will soon be conditionally compiled in.